# tensorlib

./: .gitignore  CMakeLists.txt  CMakeLists_eigen.txt.in  README.md
src/: CMakeLists.txt  datatype.h  datatype_conversion.h  slice.h  tensor.cpp  tensor.h  tensor_config.h  tensor_traits.h  tensordata.cpp  tensordata.h  tensorshape.cpp  tensorshape.h
src/internal/: datatype_conversion_p.h  tensor_p.h
tests/: CMakeLists.txt  common.h  main.cpp  test_datatype.h  test_tensor.h  test_tensordata.h  test_tensorshape.h
